--- a/src/app/auth/pages/login-page/login-page.component.css
+++ b/src/app/auth/pages/login-page/login-page.component.css
@@ -1,4 +1,4 @@
 #loginContainer {
-  background-color: #E4E8EE;
-  border-color: #1C5B92;
+  background-color: var(--secondary-color);
+  border-color: var(--primary-color);
 }
