--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -5,7 +5,7 @@
     border-2 border-round-xl
     py-4 col-8 col-offset-2" id="registerContainer">
 
-  <h2 class="text-xl font-medium mb-4">Register</h2>
+  <h2 class="text-xl font-medium mb-4" id="title">Register</h2>
 
     <mat-form-field class="w-8">
       <mat-label>User</mat-label>
@@ -23,8 +23,8 @@
     </mat-form-field>
 
   <button mat-raised-button color="basic" class="border-round-xl">
-    <mat-icon>save</mat-icon>
-    Check in
+    <mat-icon class="color-primary">save</mat-icon>
+    <span class="color-primary">Check in</span>
   </button>
 
   <div class="mt-4">
