--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,3 +1,41 @@
-<p>layout works!</p>
+<mat-sidenav-container fullscreen>
 
-<router-outlet></router-outlet>
+  <mat-toolbar class="color-primary">
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon class="color-secondary">menu</mat-icon>
+    </button>
+
+    <span class="spacer"></span>
+
+    <button mat-button>
+      <span class="color-secondary">Logout</span>
+    </button>
+  </mat-toolbar>
+
+  <mat-sidenav #sidenav mode="push">
+    <mat-toolbar class="color-primary pl-4">
+      <span class="color-secondary">Menú</span>
+      <span class="spacer"></span>
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon class="color-secondary">menu</mat-icon>
+      </button>
+    </mat-toolbar>
+
+    <mat-nav-list>
+      <mat-list-item
+      *ngFor="let item of sidebarItems"
+      [routerLink]="item.url"
+      (click)="sidenav.toggle()"
+      class="px-2">
+        <mat-icon class="color-secondary" matListItemIcon>{{ item.icon }}</mat-icon>
+        <span class="color-secondary">{{ item.label }}</span>
+      </mat-list-item>
+    </mat-nav-list>
+
+  </mat-sidenav>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+
+</mat-sidenav-container>
