--- a/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -1,1 +1,16 @@
-<p>hero-page works!</p>
+<div class="container p-5" id="container">
+  <div *ngIf="hero; else divLoading" class="grid">
+    <mat-card >
+
+    </mat-card>
+  </div>
+
+  <!-- TODO: Hacer loading en condiciones  -->
+  <ng-template #divLoading>
+    <mat-grid-list cols="1">
+      <mat-grid-tile>
+        <mat-spinner></mat-spinner>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </ng-template>
+</div>
