--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -8,7 +8,8 @@
     <span class="spacer"></span>
 
     <button mat-button>
-      <span class="color-secondary">Logout</span>
+      <span class="color-secondary" order="1">Logout</span>
+      <mat-icon class="color-secondary" order="2">logout</mat-icon>
     </button>
   </mat-toolbar>
 
@@ -31,7 +32,6 @@
         <span class="color-secondary">{{ item.label }}</span>
       </mat-list-item>
     </mat-nav-list>
-
   </mat-sidenav>
 
   <div class="container">
