--- a/src/app/heroes/pages/list-page/list-page.component.html
+++ b/src/app/heroes/pages/list-page/list-page.component.html
@@ -1,1 +1,15 @@
-<p>list-page works!</p>
+<div class="container p-5" id="container">
+  <h1 class="text-4xl font-medium text-center color-primary">
+    Heroes list
+  </h1>
+
+  <mat-divider class="mb-3"></mat-divider>
+
+  <div class="grid mb-8 pt-2">
+    <div
+      *ngFor="let hero of heroes"
+      class="col-12 sm:col-4 md:col-3 xl:col-2">
+      <heroes-hero-card [hero]="hero"></heroes-hero-card>
+    </div>
+  </div>
+</div>
