--- a/src/app/heroes/components/card/card.component.html
+++ b/src/app/heroes/components/card/card.component.html
@@ -15,7 +15,7 @@
   <mat-card-content class="mt-2">
     <h4>{{ hero.publisher }}</h4>
     <p>
-      <strong>First performance</strong>
+      <strong>First appearance</strong>
       <mat-chip-listbox class="mt-2">
         <mat-chip *ngFor="let name of hero.characters.split(',')">
           {{ name.trim() }}
