--- a/src/styles.css
+++ b/src/styles.css
@@ -27,8 +27,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: var(--text-primary-color) !important;
 }
 
+.custom-container {
+  background-color: var(--neutral-color);
+}
+
+
 ::-webkit-scrollbar {
-  width: 8px;     
+  width: 8px;
   height: 8px;
 }
 
