--- a/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -21,7 +21,7 @@
 
       <mat-card-content>
         <mat-list>
-          <mat-list-item *ngFor="let item of getHeroKeyValue(hero) | keyvalue">
+          <mat-list-item *ngFor="let item of hero | heroKeyValues | keyvalue">
             <mat-icon matListItemIcon class="color-primary">arrow_right</mat-icon>
             <h3 matListItemTitle class="text-base font-medium color-primary">{{ item.key | propertyFormatter}}</h3>
             <p matListItemLine>
