--- a/src/app/heroes/pages/search-page/search-page.component.html
+++ b/src/app/heroes/pages/search-page/search-page.component.html
@@ -1,1 +1,19 @@
-<p>search-page works!</p>
+<div class="flex flex-column">
+  <h3>Browser</h3>
+
+  <mat-form-field>
+    <mat-label>Hero finder</mat-label>
+    <input
+      type="text"
+      matInput
+      [formControl]="searchInput"
+      [matAutocomplete]="auto"
+    />
+  </mat-form-field>
+
+  <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+    <mat-option *ngFor="let hero of heroes | async" [value]="hero.superhero">
+      {{ hero.superhero }}
+    </mat-option>
+  </mat-autocomplete>
+</div>
