Feat: update styles and add search page

--- a/src/app/auth/pages/register-page/register-page.component.css
+++ b/src/app/auth/pages/register-page/register-page.component.css
@@ -1,6 +1,6 @@
 #registerContainer {
-  background-color: #E4E8EE;
-  border-color: #1C5B92;
+  background-color: var(--secondary-color);
+  border-color: var(--primary-color);
 }
 
 #title {
