--- a/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -1,4 +1,4 @@
-<div class="container custom-container p-5" id="container">
+<div class="container custom-container p-5">
   <div *ngIf="hero;" class="grid py-4 px-8">
     <mat-card class="col-12 sm:col-6 border-round-xl border-3 color-primary">
       <mat-card-header>
