--- a/src/app/heroes/pages/list-page/list-page.component.html
+++ b/src/app/heroes/pages/list-page/list-page.component.html
@@ -1,4 +1,4 @@
-<div class="container custom-container p-5" id="container">
+<div class="container custom-container p-5">
   <h1 class="text-4xl font-medium text-center color-primary">
     Heroes list
   </h1>
