--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,1 +1,65 @@
-<p>new-page works!</p>
+<div class="container custom-container p-5">
+  <h1 class="text-4xl font-medium text-center color-primary">
+    Edit/add hero
+    <small>Superman</small>
+  </h1>
+
+  <mat-divider class="mb-3"></mat-divider>
+
+  <div class="grid">
+    <div class="col-12 sm:col-6">
+      <mat-card class="border-round-xl border-3 color-primary">
+        <img src="" alt="hero image">
+      </mat-card>
+    </div>
+
+    <div class="col-12 sm:col-6">
+      <mat-card class="border-round-xl border-3 color-primary">
+        <mat-card-content>
+
+          <div class="grid p-4">
+            <mat-form-field class="col-6">
+              <mat-label>Superhero</mat-label>
+              <input matInput type="text" required/>
+            </mat-form-field>
+
+            <mat-form-field class="col-6">
+              <mat-label>Alter ego</mat-label>
+              <input matInput type="text" required/>
+            </mat-form-field>
+
+            <mat-form-field class="col-12">
+              <mat-label>First appearance</mat-label>
+              <input matInput type="text" required/>
+            </mat-form-field>
+
+            <mat-form-field class="col-12">
+              <mat-label>Characters</mat-label>
+              <input matInput type="text" required/>
+            </mat-form-field>
+
+            <mat-form-field class="col-12">
+              <mat-label>Creator</mat-label>
+              <mat-select required>
+                <mat-option *ngFor="let publisher of publishers | keyvalue">
+                  {{ publisher.value }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div class="flex justify-content-between px-4 pb-3">
+            <button mat-raised-button class="color-warn">
+              <mat-icon>delete</mat-icon>
+              Delete
+            </button>
+            <button mat-raised-button class="color-primary">
+              <mat-icon>save</mat-icon>
+              Save
+            </button>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
