--- a/src/app/heroes/pages/list-page/list-page.component.html
+++ b/src/app/heroes/pages/list-page/list-page.component.html
@@ -5,10 +5,11 @@
 
   <mat-divider class="mb-3"></mat-divider>
 
-  <div class="grid mb-8 pt-2">
+  <div class="grid mb-8 pt-2 justify-content-center">
     <div
       *ngFor="let hero of heroes"
-      class="col-12 sm:col-4 md:col-3 xl:col-2">
+      class="col-12 sm:col-5 md:col-4"
+      id="cardContainer">
       <heroes-hero-card [hero]="hero"></heroes-hero-card>
     </div>
   </div>
