--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,59 +1,73 @@
 <div class="container custom-container p-5">
   <h1 class="text-4xl font-medium text-center color-primary">
-    Edit/add hero
-    <small>Superman</small>
+    {{ currentHero.id ? 'Edit' : 'Add' }}
+    hero
+    <small *ngIf="currentHero.id" class="underline">
+      {{ currentHero.superhero }}
+    </small>
   </h1>
 
   <mat-divider class="mb-3"></mat-divider>
 
   <div class="grid">
-    <div class="col-12 sm:col-6">
-      <mat-card class="border-round-xl border-3 color-primary">
-        <img src="" alt="hero image">
-      </mat-card>
+    <div class="flex col-12 sm:col-6 justify-content-center">
+      <img
+        [src]="currentHero | heroImage"
+        alt="heroimage"
+        class="border-round-xl border-3">
     </div>
 
     <div class="col-12 sm:col-6">
       <mat-card class="border-round-xl border-3 color-primary">
         <mat-card-content>
 
-          <div class="grid p-4">
+          <form class="grid p-4" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
             <mat-form-field class="col-6">
               <mat-label>Superhero</mat-label>
-              <input matInput type="text" required/>
+              <input matInput type="text" required formControlName="superhero"/>
             </mat-form-field>
 
             <mat-form-field class="col-6">
               <mat-label>Alter ego</mat-label>
-              <input matInput type="text" required/>
+              <input matInput type="text" required formControlName="alter_ego"/>
             </mat-form-field>
 
             <mat-form-field class="col-12">
               <mat-label>First appearance</mat-label>
-              <input matInput type="text" required/>
+              <input matInput type="text" required formControlName="first_appearance"/>
             </mat-form-field>
 
             <mat-form-field class="col-12">
               <mat-label>Characters</mat-label>
-              <input matInput type="text" required/>
+              <input matInput type="text" required formControlName="characters"/>
             </mat-form-field>
 
             <mat-form-field class="col-12">
               <mat-label>Creator</mat-label>
-              <mat-select required>
-                <mat-option *ngFor="let publisher of publishers | keyvalue">
+              <mat-select required formControlName="publisher">
+                <mat-option *ngFor="let publisher of publishers | keyvalue"
+                  [value]="publisher.value">
                   {{ publisher.value }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
-          </div>
+
+            <mat-form-field class="col-12">
+              <mat-label>Alternative Image</mat-label>
+              <input matInput type="text" formControlName="alt_img"/>
+            </mat-form-field>
+          </form>
 
           <div class="flex justify-content-between px-4 pb-3">
-            <button mat-raised-button class="color-warn">
+            <button
+              *ngIf="currentHero.id"
+              (click)="OnDeleteHero()"
+              mat-raised-button class="color-warn">
               <mat-icon>delete</mat-icon>
               Delete
             </button>
-            <button mat-raised-button class="color-primary">
+            <span></span>
+            <button mat-raised-button class="color-primary" (click)="onSubmit()">
               <mat-icon>save</mat-icon>
               Save
             </button>
