Feat: added guards and implemented login and logout

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -21,7 +21,8 @@
     </button>
   </mat-form-field>
 
-  <button mat-raised-button color="basic" class="border-round-xl">
+  <button mat-raised-button color="basic" class="border-round-xl"
+    (click)="onLogin()">
     <mat-icon class="color-primary">login</mat-icon>
     <span class="color-primary">Login</span>
   </button>
