--- a/src/app/heroes/pages/layout-page/layout-page.component.css
+++ b/src/app/heroes/pages/layout-page/layout-page.component.css
@@ -7,3 +7,9 @@ mat-toolbar {
   background-color: var(--primary-color);
   color: var(--secondary-color);
 }
+
+mat-chip {
+  background-color: var(--primary-color) !important;
+  border: 2px solid var(--secondary-color) !important;
+  border-color: var(--secondary-color) !important;
+}
